# TypeTreeRipper

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE.md  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
source/: CMakeLists.txt  GenerateTypeTreeTransfer.hpp  MemLabelId.hpp  Object.hpp  RTTI.hpp  TransferBase.hpp  TypeTree.hpp  binary_output.hpp  common.hpp  dumper.hpp  dynamic_array.hpp  executable.hpp  main.cpp  platform_impl.hpp  version.cpp
source/android/: android_impl.cpp
source/linux/: linux_impl.cpp
source/windows/: windows_impl.cpp  winhttp.cpp
tools/: TypeTreeRipper.Converter.slnx
tools/TypeTreeRipper.BinaryFormat/: BinaryReaderExtensions.cs  DumpedTypeTree.cs  DumpedTypeTreeHeader.cs  DumpedTypeTreeNode.cs  DumpedTypeTreeNodeFlags.cs  DumpedTypeTreeNodeMetaFlags.cs  DumpedTypeTreeRTTI.cs  DumpedTypeTreeRTTIFlags.cs  TransferInstructionFlags.cs  TypeTreeBinary.cs  TypeTreeRipper.BinaryFormat.csproj
tools/TypeTreeRipper.Converter/: Program.cs  TypeTreeRipper.Converter.csproj
tools/TypeTreeRipper.Converter/Features/StructDump/: StructDumpBinaryOutput.cs  StructDumpCommand.cs  StructDumpTextOutput.cs
tools/TypeTreeRipper.Converter/Features/Tpk/: TpkCommand.cs  TpkConversionContext.cs  TpkOutput.cs
